[workspace]
members = [
    "allocative",
    "allocative_derive",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/facebookexperimental/allocative"

[workspace.dependencies]
ctor = "0.1.26"
proc-macro2 = "1.0"
quote = "1.0.3"
syn = { version = "2", features = ["full", "extra-traits"] }
